adding projet.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
                 <li><a href="portfolio.html">Accueil</a></li>
                 <li><a href="A_propos.html">A propos</a></li>
                 <li><a href="https://quasar42.herokuapp.com/" target="_blank">Réalisation 1</a></li>
-                <li><a href="http://btssio2022.edta-sornas.com/MouhammadBillyG/" target="_blank">Réalisation 2(télécharger le fichier apk)</a></li>
+                <li><a href="http://btssio2022.edta-sornas.com/MouhammadBillyG/" target="_blank">Réalisation 2(apk)</a></li>
                 <li><a href="Projets.html">Descriptifs des projets</a></li>
                 <li><a href="contactez_moi.html">Contacter moi</a></li>
             </ul>
