--- a/A_propos.html
+++ b/A_propos.html
@@ -30,8 +30,12 @@
             <h1 class="nous">
                 A propos de moi!
             </h1>
-            <p><i><h3>Mon ambition est de créer des produits de qualité qui facilitent la vie des utilisateurs.Nous élaborer des stratégies de conception d'application mobile et site web  innovantes pour des startup et de grandes marques internationales.
-               Je suis passionnés du code ce qui me permet de m'investir au maximum dans mes projets.
+            <p><i><h3>Après mon Bac S j'ai suivi un cursus en BTS sio option Slam à l'école EDTA-SORNAS(Paris) <br>
+                J'aime me lancer des défis personnels comme réaliser des programmes fonctionnels <br> ou créer desz sites web
+                pour m'entrainner et me perfectionner. <br>En dehors des cours, je fais du soutient scolaire 
+                en mathématiques et sciences physiques <br> pour des élèves du collège et lycée,je fais aussi du football en club. <br>
+                Aujourdh'ui à l'issue de mon BTS je souhaite suivre un cusrsus bachelor en Big-Data & IA puis continuer <br>
+                pour un Bac+4 et Bac+5.
             </i></h3> </p>
             <img class="about" src="qualification.png" alt="">
           <p><h2> <a href="https://github.com/Billyjr10?tab=repositories">Mes réalisations sont ici!</a> </h2></p> 
