--- a/portfolio.html
+++ b/portfolio.html
@@ -17,15 +17,16 @@
                 <li><a href="A_propos.html">A propos</a></li>
                 <li><a href="https://quasar42.herokuapp.com/" target="_blank">Réalisation 1</a></li>
                 <li><a href="http://btssio2022.edta-sornas.com/MouhammadBillyG/" target="_blank">Réalisation 2(apk)</a></li>
-                <li><a href="Projets.html">Descriptifs des projets</a></li>
-                <li><a href="contactez_moi.html">Contacter moi</a></li>
+                <li><a href="Projets.html">Descriptifs</a></li>
+                <li><a href="https://influence-pc.fr/">Veille</a></li>
+                <li><a href="contactez_moi.html">Contact</a></li>
             </ul>
         </nav>
         <section>
             <div class="detel">
                 <h1>Je suis Mr Gueye <br><span>Mouhammad </span></h1>
                 <p>Ceci est mon portfolio officiel pour montrer toutes mes réalisations
-                    <br>en Développement wep et mobile </p>
+                    <br>en Développement web et mobile </p>
                 <a href="https://www.canva.com/design/DAETkgk8sug/jdgh2yjNoNgEUGgzqWdxQw/view?utm_content=DAETkgk8sug&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink">Downdload CV</a>
             </div>
             <div class="images">
