--- a/portfolio.html
+++ b/portfolio.html
@@ -18,6 +18,7 @@
                 <li><a href="https://quasar42.herokuapp.com/" target="_blank">Réalisation 1</a></li>
                 <li><a href="http://btssio2022.edta-sornas.com/MouhammadBillyG/" target="_blank">Réalisation 2(apk)</a></li>
                 <li><a href="Projets.html">Descriptifs</a></li>
+                <li><a href="http://btssio2022.edta-sornas.com/MouhammadBillyG/Tableau%20de%20synth%c3%a8se.pdf">T.C</a></li>
                 <li><a href="https://influence-pc.fr/">Veille</a></li>
                 <li><a href="contactez_moi.html">Contact</a></li>
             </ul>
